--- a/config.ini
+++ b/config.ini
@@ -1,17 +1,8 @@
 [SnowflakePOC]
-sfAccount = ac91255.ap-northeast-2.aws
-sfUser = TANMAYNEMADE
-sfPass = Tempsnow1!
-sfRole = ACCOUNTADMIN
-sfDB = GARDEN_PLANTS
-sfSchema = VEGGIES
-sfWarehouse = COMPUTE_WH
-
-[Snowflake2]
-sfAccount = ac91255.ap-northeast-2.aws
-sfUser = TANMAYNEMADE
-sfPass = Tempsnow1!
-sfRole = ACCOUNTADMIN
-sfDB = GARDEN_PLANTS
-sfSchema = VEGGIES
-sfWarehouse = COMPUTE_WH
+sfAccount = nq94943.ap-south-1.aws
+sfUser = mathavale
+sfPass = Infosys123
+sfRole = accountadmin
+sfWarehouse = compute_wh
+sfDB = snowflake
+sfSchema = account_usage
