--- a/config.json
+++ b/config.json
@@ -1,9 +1,11 @@
 {
-"account" : "ac91255.ap-northeast-2.aws",
-"user" : "TANMAYNEMADE",
-"password" : "Tempsnow1!",
-"role" : "ACCOUNTADMIN",
-"database" : "UTIL_DB",
-"schema" : "PUBLIC",
-"warehouse" : "COMPUTE_WH"
+"SnowflakePOC":{
+    "sfAccount" : "nq94943.ap-south-1.aws",
+    "sfUser" : "mathavale",
+    "sfPass" : "Infosys123",
+    "sfRole" : "accountadmin",
+    "sfWarehouse" : "compute_wh",
+    "sfDB" : "snowflake",
+    "sfSchema" : "account_usage"
+}
 }
